--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ archives_base_name=streamermode
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.97.2+1.20.4
 yacl_version=3.5.0+1.20.4-fabric
+modmenu_version=9.2.0
