--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,14 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.9
 
-# Mod Properties
 mod_version=1.0
 maven_group=io.github.redvortexdev
 archives_base_name=streamermode
-# Dependencies
+
 fabric_version=0.108.0+1.21.1
+adventure_version=5.14.1
 yacl_version=3.6.1+1.21-fabric
 modmenu_version=11.0.3
