--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ fabric_version=0.108.0+1.21.1
 adventure_version=5.14.1
 yacl_version=3.6.1+1.21-fabric
 modmenu_version=11.0.3
+twitch4j_version=1.24.0+1.10.0
